attempt to center blog view

--- a/content_builder/src/html/themes/enigma/dark/OrganizationNewsModalComponent.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationNewsModalComponent.html
@@ -23,7 +23,7 @@
    </head>
    <body>
       <div data-component-name="dark_OrganizationNewsModalComponent" class="classes.darkBG">
-            <div id="about_modal" class="ui modal" data-component-props="style={this.props.extra_style}">
+            <div id="about_modal" class="ui modal" style="margin-left:auto;margin-right:auto;">
                 <div class="classes.modal_inner">
                     <div class="header">
                         <div class="classes.modal_news_header">
