--- a/content_builder/src/html/themes/admin/OrganizationAdminNewThemeComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminNewThemeComponent.html
@@ -53,35 +53,35 @@
                 </div>
                 <p>Change Sponsor Background (Felzec Theme)</p>
                 <div class="classes.jumbotron_container">
-                    <img class="classes.jumbotron_image" data-component-props="src={this.props.image_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
+                    <img class="classes.jumbotron_image" data-component-props="src={this.props.image_sponsor_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
                     <div data-component-props="onClick={this.props.editSponsorImage}" id="theme_modal_button" class="classes.jumbotron_overlay">
                         <div class="classes.jumbotron_model_switch">Edit</div>
                     </div>
                 </div>
                 <p>Change News Background (Felzec Theme)</p>
                 <div class="classes.jumbotron_container">
-                    <img class="classes.jumbotron_image" data-component-props="src={this.props.image_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
+                    <img class="classes.jumbotron_image" data-component-props="src={this.props.image_news_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
                     <div data-component-props="onClick={this.props.editNewsImage}" id="theme_modal_button" class="classes.jumbotron_overlay">
                         <div class="classes.jumbotron_model_switch">Edit</div>
                     </div>
                 </div>
                 <p>Change Matches Background (Felzec Theme)</p>
                 <div class="classes.jumbotron_container">
-                    <img class="classes.jumbotron_image" data-component-props="src={this.props.image_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
+                    <img class="classes.jumbotron_image" data-component-props="src={this.props.image_matches_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
                     <div data-component-props="onClick={this.props.editMatchessImage}" id="theme_modal_button" class="classes.jumbotron_overlay">
                         <div class="classes.jumbotron_model_switch">Edit</div>
                     </div>
                 </div>
                 <p>Change Rosters Background (Felzec Theme)</p>
                 <div class="classes.jumbotron_container">
-                    <img class="classes.jumbotron_image" data-component-props="src={this.props.image_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
+                    <img class="classes.jumbotron_image" data-component-props="src={this.props.image_rosters_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
                     <div data-component-props="onClick={this.props.editRostersImage}" id="theme_modal_button" class="classes.jumbotron_overlay">
                         <div class="classes.jumbotron_model_switch">Edit</div>
                     </div>
                 </div>
                 <p>Change Media Background (Felzec Theme)</p>
                 <div class="classes.jumbotron_container">
-                    <img class="classes.jumbotron_image" data-component-props="src={this.props.image_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
+                    <img class="classes.jumbotron_image" data-component-props="src={this.props.image_media_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
                     <div data-component-props="onClick={this.props.editMediaImage}" id="theme_modal_button" class="classes.jumbotron_overlay">
                         <div class="classes.jumbotron_model_switch">Edit</div>
                     </div>
