added and cxonnected main background image in admin for new themes

--- a/content_builder/src/html/themes/admin/OrganizationAdminNewThemeComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminNewThemeComponent.html
@@ -51,6 +51,13 @@
                         <div class="classes.jumbotron_model_switch">Edit</div>
                     </div>
                 </div>
+                <p>Change Main Background (Felzec Theme)</p>
+                <div class="classes.jumbotron_container">
+                    <img class="classes.jumbotron_image" data-component-props="src={this.props.image_main_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
+                    <div data-component-props="onClick={this.props.editMainImage}" id="theme_modal_button" class="classes.jumbotron_overlay">
+                        <div class="classes.jumbotron_model_switch">Edit</div>
+                    </div>
+                </div>
                 <p>Change Sponsor Background (Felzec Theme)</p>
                 <div class="classes.jumbotron_container">
                     <img class="classes.jumbotron_image" data-component-props="src={this.props.image_sponsor_src}" src="http://api.originbeta.net/defaultImages/section1-bg2.jpg" />
