--- a/content_builder/src/html/themes/felzec/light/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationNavComponent.html
@@ -23,8 +23,8 @@
    </head>
    <body>
         <div data-component-name="light_OrganizationNavComponent" class="classes.felzec_nav_constraint">
-            <div class="ui stackable two column grid">
-                <div class="six wide column">
+            <div class="ui stackable two column grid" style="padding:0px">
+                <div class="six wide column" style="padding:0px">
                     <div class="classes.obliviot_light_social_menu_container">
                         <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link1}">
                             <i class="fa fa-instagram"></i>
