--- a/content_builder/src/html/themes/felzec/light/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationNavComponent.html
@@ -46,23 +46,28 @@
                         </div>
                     </div>
                 </div>
-                <div class="ten wide column">
+                <div class="ten wide column" style="padding:0px">
                     <div class="classes.obliviot_nav_right">
-                        <div class="classes.obliviot_org_menu_light_container">
-                            <a href="#"><div id="menu_login" class="classes.org_menu_obliviot_light_item" data-component-props="onClick={this.props.handleLoginClick}">Login</div></a>
-                            <a href="#"><div id="menu_news" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_obliviot_light_item">Store</div></a>
-                            <a href="#"><div id="menu_blog" data-component-props="style={this.props.blog_style} onClick={this.props.handleBlogClick}" class="classes.org_menu_obliviot_light_item">Blog</div></a>
-                            <a href="#"><div id="roster_button" data-component-props="style={this.props.roster_menu_style} onClick={this.props.handleRosterButtonClick}" class="classes.org_menu_obliviot_light_item">Rosters</div>
-                                <div class="classes.obliviot_dropdown_container" data-component-props="style={this.props.roster_dropdown_style}">
-                                        <div class="classes.obliviot_dropdown_container_close" data-component-props="onClick={this.props.handleCloseClick}">X</div>
-                                    <div data-component-value="{this.props.dropdown_item}">dropdown</div>
-                                </div>
-                            </a>
-                            <a href="#"><div id="sponsers_button" data-component-props="style={this.props.sponsers_style} onClick={this.props.handleSponsersClick}" class="classes.org_menu_obliviot_light_item">Sponsors</div></a>
-                            <a href="#"><div id="about_button" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_obliviot_light_item">About</div></a>
-                            <a href="#home_cont"><div id="menu_home" data-component-props="style={this.props.home_style}"  class="classes.org_menu_obliviot_light_item">Home</div></a>
+                        <div class="classes.felzec_light_navicon_menu_item" data-component-value="{this.props.navicon}">
+                            <i class="fa fa-navicon"></i>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="classes.felzec_menu_container">
+                <div class="classes.obliviot_org_menu_light_container">
+                    <a href="#"><div id="menu_login" class="classes.org_menu_obliviot_light_item" data-component-props="onClick={this.props.handleLoginClick}">Login</div></a>
+                    <a href="#"><div id="menu_news" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_obliviot_light_item">Store</div></a>
+                    <a href="#"><div id="menu_blog" data-component-props="style={this.props.blog_style} onClick={this.props.handleBlogClick}" class="classes.org_menu_obliviot_light_item">Blog</div></a>
+                    <a href="#"><div id="roster_button" data-component-props="style={this.props.roster_menu_style} onClick={this.props.handleRosterButtonClick}" class="classes.org_menu_obliviot_light_item">Rosters</div>
+                        <div class="classes.obliviot_dropdown_container" data-component-props="style={this.props.roster_dropdown_style}">
+                                <div class="classes.obliviot_dropdown_container_close" data-component-props="onClick={this.props.handleCloseClick}">X</div>
+                            <div data-component-value="{this.props.dropdown_item}">dropdown</div>
+                        </div>
+                    </a>
+                    <a href="#"><div id="sponsers_button" data-component-props="style={this.props.sponsers_style} onClick={this.props.handleSponsersClick}" class="classes.org_menu_obliviot_light_item">Sponsors</div></a>
+                    <a href="#"><div id="about_button" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_obliviot_light_item">About</div></a>
+                    <a href="#home_cont"><div id="menu_home" data-component-props="style={this.props.home_style}"  class="classes.org_menu_obliviot_light_item">Home</div></a>
                 </div>
             </div>
         </div>
