finished sponsor system in header nav

--- a/content_builder/src/html/themes/felzec/light/OrganizationSponserComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationSponserComponent.html
@@ -23,7 +23,7 @@
    </head>
    <body>
         <div data-component-name="light_OrganizationSponserComponent">
-            <div class="classes.felzec_sponsor_box">
+            <div data-component-props="style={this.props.felzec_sponsor_style}" class="classes.felzec_sponsor_box">
                 
                 <div class="classes.felzec_sponsor_container">
                     <div class="ui stackable four column grid" data-component-value="{this.props.sponsor_content}">
