--- a/content_builder/src/html/themes/felzec/light/OrganizationSponsersItemComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationSponsersItemComponent.html
@@ -23,7 +23,7 @@
    </head>
    <body id="gradient">
         <div data-component-name="light_OrganizationSponsersItemComponent">
-            <div class="classes.light_roster_item_container">
+            <div class="classes.felzec_roster_item_container">
                 <div class="ui stackable two column grid">
                     <div class="three wide column">
                         <div class="classes.sponser_item_img_container">
@@ -33,10 +33,10 @@
                     <div class="thirteen wide column">
                         <div style="display: table; padding-top: 10px; padding-bottom: 10px">
                             <div class="classes.roster_item_name_container">
-                                <span class="classes.light_roster_name">{this.props.sponser_name}</span>
+                                <span class="classes.felzec_roster_name">{this.props.sponser_name}</span>
                             </div>
                             <div class="classes.roster_item_about_container">
-                                <span class="classes.light_roster_about_text">{this.props.sponser_desc}</span>
+                                <span class="classes.felzec_roster_about_text">{this.props.sponser_desc}</span>
                             </div>
                         </div>
                     </div>
