--- a/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
@@ -24,7 +24,7 @@
    <body>
       <div data-component-name="light_OrganizationPageComponent"  class="classes.lightObliotBG">
             <div>
-                <img id="bg_img" class="classes.obliviot_light_bg_img" src="../images/light_main.jpeg" alt=""/>
+                <img id="bg_img" class="classes.felzec_light_bg_img" src="../images/light_main.jpeg" alt=""/>
                 <div class="classes.obliviot_light_bg_filter" data-component-props="style={this.props.obliviot_page_style}"></div>
                 <div>
                     <header class="classes.felzec_lightHeader">
