--- a/content_builder/src/html/themes/felzec/light/OrganizationBlogComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationBlogComponent.html
@@ -21,9 +21,9 @@
       </script>    
    </head>
    <body>
-      <div data-component-name="light_OrganizationBlogComponent">
-        <div class="ui stackable two column grid">
-            <div class="seven wide column">
+      <div data-component-name="light_OrganizationBlogComponent" class="classes.felzec_blog_container">
+        <div class="ui stackable three column grid">
+            <div class="column">
                 <div class="classes.obliviot_lightBlogMaxContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_1);}}">
                     <img class="classes.obliviot_main_news_item_image" data-component-props="src={this.props.blog_media_1}" src="../images/news_test_1.jpg" />    
                     <div class="classes.obliviot_light_main_news_content_container">
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <div class="nine wide column">
+            <div class="column">
                 <div class="classes.obliviot_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_2);}}">
                     <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_2}" src="../images/news_mini_image.jpg" />    
                     <div class="classes.obliviot_light_main_news_content_container">
@@ -64,6 +64,36 @@
                         </div>
                         <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
                             <p class="classes.obliviot_light_news_body" data-component-value="{this.props.blog_content_3}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
+                        </div>
+                        <div class="classes.obliviot_light_news_decor"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="classes.obliviot_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_4);}}">
+                    <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_4}" src="../images/news_mini_image.jpg" />    
+                    <div class="classes.obliviot_light_main_news_content_container">
+                        <div>
+                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
+                                <span class="classes.obliviot_light_news_title" data-component-value="{this.props.blog_title_4}">We are live with a very long title</span>
+                            </div>
+                        </div>
+                        <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
+                            <p class="classes.obliviot_light_news_body" data-component-value="{this.props.blog_content_4}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
+                        </div>
+                        <div class="classes.obliviot_light_news_decor"></div>
+                    </div>
+                </div>
+                <div class="classes.obliviot_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_5);}}">
+                    <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_5}" src="../images/news_mini_image.jpg" />    
+                    <div class="classes.obliviot_light_main_news_content_container">
+                        <div>
+                            <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
+                                <span class="classes.obliviot_light_news_title" data-component-value="{this.props.blog_title_5}">We are live with a very long title</span>
+                            </div>
+                        </div>
+                        <div style="width: 100%;height: 0px; overflow-y: hidden;text-overflow: ellipsis;">
+                            <p class="classes.obliviot_light_news_body" data-component-value="{this.props.blog_content_5}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</p>
                         </div>
                         <div class="classes.obliviot_light_news_decor"></div>
                     </div>
