changed images for blogs

--- a/content_builder/src/html/themes/admin/OrganizationAdminNewThemeComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminNewThemeComponent.html
@@ -45,7 +45,7 @@
                     </div>
                     <div data-component-props="style={this.props.felzec_light_style} onClick={this.props.handleFelzecLightClick}" class="classes.admin_theme_display_container">
                         <img class="classes.admin_theme_display_image" data-component-props="src={this.props.felzec_light_image}" src="https://s3.amazonaws.com/origin-images/origin/light-theme.jpg" />
-                        <div class="classes.admin_theme_display_text">Felzec</div>
+                        <div class="classes.admin_theme_display_text">Felzek</div>
                     </div>
                 </div>
                 <p>Change Jumbotron Images</p>
