--- a/content_builder/src/html/themes/felzec/light/OrganizationBlogComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationBlogComponent.html
@@ -21,11 +21,11 @@
       </script>    
    </head>
    <body>
-      <div data-component-name="light_OrganizationBlogComponent" class="classes.felzec_blog_container">
+      <div data-component-name="light_OrganizationBlogComponent" class="classes.felzec_blog_container" data-component-props="style={this.props.bg_style}">
         <div class="ui stackable three column grid">
             <div class="column">
-                <div class="classes.obliviot_lightBlogMaxContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_1);}}">
-                    <img class="classes.obliviot_main_news_item_image" data-component-props="src={this.props.blog_media_1}" src="../images/news_test_1.jpg" />    
+                <div class="classes.felzec_lightBlogMaxContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_1);}}">
+                    <img class="classes.felzec_main_news_item_image" data-component-props="src={this.props.blog_media_1}" src="../images/news_test_1.jpg" />    
                     <div class="classes.obliviot_light_main_news_content_container">
                         <div>
                             <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
@@ -40,8 +40,8 @@
                 </div>
             </div>
             <div class="column">
-                <div class="classes.obliviot_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_2);}}">
-                    <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_2}" src="../images/news_mini_image.jpg" />    
+                <div class="classes.felzec_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_2);}}">
+                    <img class="classes.felzec_main_news_item_mini_image" data-component-props="src={this.props.blog_media_2}" src="../images/news_mini_image.jpg" />    
                     <div class="classes.obliviot_light_main_news_content_container">
                         <div>
                             <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
@@ -54,8 +54,8 @@
                         <div class="classes.obliviot_light_news_decor"></div>
                     </div>
                 </div>
-                <div class="classes.obliviot_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_3);}}">
-                    <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_3}" src="../images/news_mini_image.jpg" />    
+                <div class="classes.felzec_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_3);}}">
+                    <img class="classes.felzec_main_news_item_mini_image" data-component-props="src={this.props.blog_media_3}" src="../images/news_mini_image.jpg" />    
                     <div class="classes.obliviot_light_main_news_content_container">
                         <div>
                             <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
@@ -70,8 +70,8 @@
                 </div>
             </div>
             <div class="column">
-                <div class="classes.obliviot_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_4);}}">
-                    <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_4}" src="../images/news_mini_image.jpg" />    
+                <div class="classes.felzec_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_4);}}">
+                    <img class="classes.felzec_main_news_item_mini_image" data-component-props="src={this.props.blog_media_4}" src="../images/news_mini_image.jpg" />    
                     <div class="classes.obliviot_light_main_news_content_container">
                         <div>
                             <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
@@ -84,8 +84,8 @@
                         <div class="classes.obliviot_light_news_decor"></div>
                     </div>
                 </div>
-                <div class="classes.obliviot_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_5);}}">
-                    <img class="classes.obliviot_main_news_item_mini_image" data-component-props="src={this.props.blog_media_5}" src="../images/news_mini_image.jpg" />    
+                <div class="classes.felzec_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_5);}}">
+                    <img class="classes.felzec_main_news_item_mini_image" data-component-props="src={this.props.blog_media_5}" src="../images/news_mini_image.jpg" />    
                     <div class="classes.obliviot_light_main_news_content_container">
                         <div>
                             <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
