WIP teamn section

--- a/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
@@ -34,7 +34,7 @@
                     <div class="classes.felzec_lightBlogContainer">
                         <div data-component-value="{this.props.blogContent}">Nav</div>
                     </div>
-                    <div data-component-value="{this.props.rosterContent}" id="roster_component" style="padding-top:30px;">
+                    <div data-component-value="{this.props.teamContent}" id="team_component">
                             
                     </div>
                     <div class="classes.obliviot_light_section_control_container" data-component-props="style={this.props.obliviot_hidden_style}">
@@ -77,6 +77,9 @@
                         <div class="classes.obliviot_light_section_view_more">VIEW MORE</div>
                     </div>
                     <div id="matches_container" data-component-value="{this.props.matchesContent}">
+                    </div>
+                    <div data-component-value="{this.props.rosterContent}" id="roster_component" style="padding-top:30px;">
+                            
                     </div>
                     <footer class="classes.obliviot_darkHeader">
                         <div data-component-value="{this.props.navContent}">Nav</div>
