--- a/content_builder/src/html/themes/felzec/light/OrganizationTeamGameComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationTeamGameComponent.html
@@ -21,14 +21,8 @@
       </script>    
    </head>
    <body>
-        <div data-component-name="light_OrganizationTeamComponent"  class="classes.felzec_team_container">
-            <div class="classes.felzec_team_container" data-component-props="style={this.props.bg_style}">
-            </div>
-            <div class="classes.felzec_team_filter_container" data-component-props="style={this.props.filter_style}"></div>
-            <div class="classes.felzec_team_inner_container">
-                <div class="classes.felzec_game_container" data-component-value="{this.props.roster_games}">game</div>
-                <div class="classes.felzec_teammate_container" data-component-value="{this.props.roster_teams}">game</div>
-            </div>
+        <div data-component-name="light_OrganizationTeamGameComponent"  class="classes.felzec_team_game_container">
+            <img class="classes.felzec_team_game_media" data-component-props="src={this.props.game_media_1}" />
         </div>
    </body>
 </html>
