--- a/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
@@ -37,6 +37,7 @@
                     <div data-component-value="{this.props.teamContent}" id="team_component">
                             
                     </div>
+                    <div id="matches_container" data-component-value="{this.props.matchesContent}">MATCHES</div>
                     <div class="classes.obliviot_light_section_control_container" data-component-props="style={this.props.obliviot_hidden_style}">
                         <div class="classes.obliviot_light_section_divider"></div>
                         <div class="classes.obliviot_light_section_title">STREAMS</div>
@@ -76,7 +77,6 @@
                         <div class="classes.obliviot_light_section_title">MATCHES</div>
                         <div class="classes.obliviot_light_section_view_more">VIEW MORE</div>
                     </div>
-                    <div id="matches_container" data-component-value="{this.props.matchesContent}">
                     </div>
                     <div data-component-value="{this.props.rosterContent}" id="roster_component" style="padding-top:30px;">
                             
