--- a/content_builder/src/html/themes/felzec/light/OrganizationMatchesComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationMatchesComponent.html
@@ -22,11 +22,16 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="light_OrganizationMatchesComponent">
-            <div style="position:relative;">
-                <div class="classes.obliviot_light_matches_holder" data-component-props="ref={c => {this.props.storeRef(c);}}" data-component-value="{this.props.recent_matches}">Matches</div>
-                <div class="classes.obliviot_dark_matches_left_arrow" data-component-props="onClick={this.props.handleLeftScroll}"><i class="fa fa-arrow-left"></i></div>
-                <div class="classes.obliviot_dark_matches_right_arrow" data-component-props="onClick={this.props.handleRightScroll}"><i class="fa fa-arrow-right"></i></div>
+        <div data-component-name="light_OrganizationMatchesComponent"  class="classes.felzec_matches_container">
+            <div class="classes.felzec_matches_container" data-component-props="style={this.props.bg_style}">
+            </div>
+            <div class="classes.felzec_matches_filter_container" data-component-props="style={this.props.filter_style}"></div>
+            <div class="classes.felzec_matches_inner_container">
+                <div class="classes.felzec_switch_container">
+                    <div class="classes.felzec_switch_upcoming_container">UPCOMING MATCHES</div>
+                    <div class="classes.felzec_switch_recent_container">LATEST RESULTS</div>
+                </div>
+                <div class="classes.felzec_match_element_container" data-component-value="{this.props.recent_matches}">matches</div>
             </div>
         </div>
    </body>
