--- a/content_builder/src/html/themes/felzec/light/OrganizationTeamImageComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationTeamImageComponent.html
@@ -22,11 +22,11 @@
    </head>
    <body>
         <div data-component-name="light_OrganizationTeamImageComponent"  class="classes.felzec_team_image_container">
-            <img class="classes.felzec_team_image" data-component-props="src={this.props.team_image}" />
+            <img class="classes.felzec_team_image" data-component-props="onClick={()=>{this.props.handleImageClick(this.props.felzec_overlay_style)}} src={this.props.team_image}" />
             <div class="classes.felzec_team_overlay" data-component-props="style={this.props.felzec_overlay_style}">
-                <span class="classes.felzec_team_overlay_name" data-component-value="{this.props.felzec_team_name}">John Doe</span>
-                <span class="classes.felzec_team_overlay_handle" data-component-value="{this.props.felzec_team_handle}">undertaker</span>
-                <div class="classes.felzec_team_overlay_button"></div>
+                <div class="classes.felzec_team_overlay_name" data-component-value="{this.props.felzec_team_name}">John Doe</div>
+                <div class="classes.felzec_team_overlay_handle" data-component-value="{this.props.felzec_team_handle}">undertaker</div>
+                <div class="classes.felzec_team_overlay_button" data-component-props="onClick={()=>{this.props.handleIndividualClick(this)}}">PROFILE</div>
             </div>
         </div>
    </body>
