--- a/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
@@ -38,46 +38,7 @@
                             
                     </div>
                     <div id="matches_container" data-component-value="{this.props.matchesContent}">MATCHES</div>
-                    <div class="classes.obliviot_light_section_control_container" data-component-props="style={this.props.obliviot_hidden_style}">
-                        <div class="classes.obliviot_light_section_divider"></div>
-                        <div class="classes.obliviot_light_section_title">STREAMS</div>
-                        <div class="classes.obliviot_light_section_view_more">VIEW MORE</div>
-                    </div>
-                    <div class="classes.obliviot_light_twitch_container">
-                        <div data-component-value="{this.props.twitchContent}">twitch</div>
-                    </div>
-                    <div data-component-props="style={this.props.obliviot_hidden_style}">
-                        <div class="ui stackable two column grid">
-                            <div class="ten wide column">
-                                <div class="classes.obliviot_light_section_control_container">
-                                    <div class="classes.obliviot_light_section_divider"></div>
-                                    <div class="classes.obliviot_light_section_title">NEWS</div>
-                                    <div data-component-props="onClick={this.props.handleViewBlogClick}" class="classes.obliviot_light_section_view_more">VIEW MORE</div>
-                                </div>
-                                <div id="news_div" class="classes.obliviot_light_news_outer_constraint">
-                                    <div>
-                                        <div data-component-value="{this.props.newsContent}">News</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="six wide column">
-                                <div class="classes.obliviot_light_section_control_container">
-                                    <div class="classes.obliviot_light_section_divider"></div>
-                                    <div class="classes.obliviot_light_section_title">VIDEOS</div>
-                                    <div class="classes.obliviot_light_section_view_more">VIEW MORE</div>
-                                </div>
-                                <div id="video_div">
-                                    <div data-component-value="{this.props.videoContent}">News</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="classes.obliviot_light_section_control_container" data-component-props="style={this.props.obliviot_hidden_style}">
-                        <div class="classes.obliviot_light_section_divider"></div>
-                        <div class="classes.obliviot_light_section_title">MATCHES</div>
-                        <div class="classes.obliviot_light_section_view_more">VIEW MORE</div>
-                    </div>
-                    </div>
+                    <div id="media_container" data-component-value="{this.props.mediaContent}">MEDIA</div>
                     <div data-component-value="{this.props.rosterContent}" id="roster_component" style="padding-top:30px;">
                             
                     </div>
