--- a/content_builder/src/html/themes/felzec/light/OrganizationMatchesComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationMatchesComponent.html
@@ -31,7 +31,12 @@
                     <div class="classes.felzec_switch_upcoming_container" data-component-props="style={this.props.upcoming_style} onClick={this.props.handleUpcomingClick}">UPCOMING MATCHES</div>
                     <div class="classes.felzec_switch_recent_container" data-component-props="style={this.props.recent_style} onClick={this.props.handleRecentClick}">LATEST RESULTS</div>
                 </div>
-                <div class="classes.felzec_match_element_container" data-component-value="{this.props.recent_matches}">matches</div>
+                <div data-component-props="style={this.props.rm_style}">
+                    <div class="classes.felzec_match_element_container" data-component-value="{this.props.recent_matches}">matches</div>
+                </div>
+                <div data-component-props="style={this.props.fm_style}">
+                    <div class="classes.felzec_match_element_container" data-component-value="{this.props.future_matches}">matches</div>
+                </div>
             </div>
         </div>
    </body>
