fixed bug with opening list

--- a/content_builder/src/html/themes/felzec/light/OrganizationBlogComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationBlogComponent.html
@@ -21,7 +21,7 @@
       </script>    
    </head>
    <body>
-        <div data-component-name="light_OrganizationBlogComponent">
+        <div data-component-name="light_OrganizationBlogComponent" class="classes.felzec_lightBlogContainer">
             <div class="classes.felzec_blog_container" data-component-props="style={this.props.bg_style}">
             </div>
             <div class="classes.felzec_blog_inner_container">
