--- a/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
@@ -31,9 +31,7 @@
                         <div data-component-value="{this.props.navContent}">Nav</div>
                     </header>
                     <div  id="sponsors" data-component-value="{this.props.topSponsorContent}">Nav</div>
-                    <div class="classes.felzec_lightBlogContainer">
-                        <div data-component-value="{this.props.blogContent}">Nav</div>
-                    </div>
+                    <div id="blog" data-component-value="{this.props.blogContent}">Nav</div>
                     <div data-component-value="{this.props.teamContent}" id="team_component">
                             
                     </div>
