added see m ore functionality to matches

--- a/content_builder/src/html/themes/felzec/light/OrganizationMatchesComponentElement.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationMatchesComponentElement.html
@@ -36,7 +36,7 @@
                         <div class="classes.felzec_matches_date" data-component-value="{this.props.matches_date}">22 AUG 2018</div>
                     </div>
                     <div class="column">
-                        <div class="classes.felzec_match_info_container">SEE MORE</div>
+                        <div class="classes.felzec_match_info_container"><a target="_blank" data-component-props="href={this.props.more_url}">SEE MORE</a></div>
                     </div>
                 </div>
             </div>
