--- a/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
@@ -40,8 +40,8 @@
                     <div data-component-value="{this.props.rosterContent}" id="roster_component" style="padding-top:30px;">
                             
                     </div>
-                    <footer class="classes.obliviot_darkHeader">
-                        <div data-component-value="{this.props.navContent}">Nav</div>
+                    <footer class="classes.felzec_darkFooter">
+                        <div data-component-value="{this.props.footerContent}">Nav</div>
                     </footer>
                 </div>
                 <div class="classes.obliviot_orgFooter">
